# Python_OnlineStore_Migun

./: .env.local.template  .gitignore  LICENSE  README.md  fill_goods.sql  pyproject.toml
cart/: models.py
cart/migrations/: 0001_create_cart_and_cartitem_models.py
core/: settings.py  urls.py
goods/: admin.py  models.py  urls.py  views.py
goods/migrations/: 0001_create_category_and_product_models.py  0002_add_stock_model.py
orders/: models.py
orders/migrations/: 0001_create_order_and_orderitem_models.py
templates/: base.html  index.html
templates/goods/: product_detail.html
templates/users/: login.html  register.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_created_user_model.py  0002_add_user_profile_fields.py
