[project]
name = "python-onlinestore-migun"
version = "0.1.0"
description = ""
authors = [
    {name = "EvgeniySpider",email = "evgeniy.migun@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=6.0.7,<7.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "django-environ (>=0.14.0,<0.15.0)",
    "django-admin-interface (>=0.32.0,<0.33.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false